--- a/templates/layout_head.jinja
+++ b/templates/layout_head.jinja
@@ -16,6 +16,11 @@
     <link rel="canonical" href="{{ theme_canonical_url }}{{ pagename }}.html"/>
 {% endif %}
 
+<!-- BASE URL -->
+{% if theme_base_url %}
+    <base href="{{ theme_base_url }}"/>
+{% endif %}
+
 <!-- CSS -->
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
