--- a/templates/layout_menu.jinja
+++ b/templates/layout_menu.jinja
@@ -1,5 +1,3 @@
-{% set display_tab = pagename.split('/')[0] %}
-
 <div class="container-fluid header-holder" id="header-holder">
     <div class="header-logo-container">
         <a class="header-logo" href="{{ pathto('intro_dff/index') }}" aria-label="PyTorch"></a>
@@ -9,45 +7,45 @@
         <div class="header-container">
             <div class="main-menu">
                 <ul>
-                    <li {%- if 'intro' in display_tab %} class="active"{% endif %}>
+                    <li {%- if theme_tab_intro_dff == './' or theme_tab_intro_addons == './' or theme_tab_intro_designer == './' %} class="active"{% endif %}>
                         <div id="resourcesDropdownButton" data-toggle="resources-dropdown" class="resources-dropdown">
                             <a class="resource-option with-down-orange-arrow">Intro</a>
                             <div class="resources-dropdown-menu">
-                                <a class="doc-dropdown-option nav-dropdown-item" href="{%- if display_tab == 'intro_dff' %}#{% else %}{{ pathto('intro_dff/index') }}{% endif %}">
-                                    <span class="dropdown-title {%- if display_tab == 'intro_dff' %} active{% endif %}">Dialog Flow Framework</span>
+                                <a class="doc-dropdown-option nav-dropdown-item" href="{{ theme_tab_intro_dff }}">
+                                    <span class="dropdown-title {%- if theme_tab_intro_dff == './' %} active{% endif %}">Dialog Flow Framework</span>
                                 </a>
-                                <a class="doc-dropdown-option nav-dropdown-item" href="{%- if display_tab == 'intro_addons' %}#{% else %}{{ pathto('intro_addons/index') }}{% endif %}">
-                                    <span class="dropdown-title {%- if display_tab == 'intro_addons' %} active{% endif %}">Addons</span>
+                                <a class="doc-dropdown-option nav-dropdown-item" href="{{ theme_tab_intro_addons }}">
+                                    <span class="dropdown-title {%- if theme_tab_intro_addons == './' %} active{% endif %}">Addons</span>
                                 </a>
-                                <a class="doc-dropdown-option nav-dropdown-item" href="{%- if display_tab == 'intro_designer' %}#{% else %}{{ pathto('intro_designer/index') }}{% endif %}">
-                                    <span class="dropdown-title {%- if display_tab == 'intro_designer' %} active{% endif %}">Designer</span>
+                                <a class="doc-dropdown-option nav-dropdown-item" href="{{ theme_tab_intro_designer }}">
+                                    <span class="dropdown-title {%- if theme_tab_intro_designer == './' %} active{% endif %}">Designer</span>
                                 </a>
                             </div>
                         </div>
                     </li>
 
-                    <li {%- if display_tab == 'get_started' %} class="active"{% endif %}>
-                        <a href="{%- if display_tab == 'get_started' %}#{% else %}{{ pathto('get_started/index') }}{% endif %}">Get Started</a>
+                    <li {%- if theme_tab_get_started == './' %} class="active"{% endif %}>
+                        <a href="{{ theme_tab_get_started }}">Get Started</a>
                     </li>
 
-                    <li {%- if display_tab == 'tutorials' %} class="active"{% endif %}>
-                        <a href="{%- if display_tab == 'tutorials' %}#{% else %}{{ pathto('tutorials/index') }}{% endif %}">Tutorials</a>
+                    <li {%- if theme_tab_tutorials == './' %} class="active"{% endif %}>
+                        <a href="{{ theme_tab_tutorials }}">Tutorials</a>
                     </li>
 
-                    <li {%- if display_tab == 'documentation' %} class="active"{% endif %}>
-                        <a href="{%- if display_tab == 'documentation' %}#{% else %}{{ pathto('documentation/index') }}{% endif %}">Documentation</a>
+                    <li {%- if theme_tab_documentation == './' %} class="active"{% endif %}>
+                        <a href="{{ theme_tab_documentation }}">Documentation</a>
                     </li>
 
-                    <li {%- if display_tab == 'ecosystem' %} class="active"{% endif %}>
-                        <a href="{%- if display_tab == 'ecosystem' %}#{% else %}{{ pathto('ecosystem/index') }}{% endif %}">Ecosystem</a>
+                    <li {%- if theme_tab_ecosystem == './' %} class="active"{% endif %}>
+                        <a href="{{ theme_tab_ecosystem }}">Ecosystem</a>
                     </li>
 
-                    <li {%- if 'about' in display_tab %} class="active"{% endif %}>
+                    <li {%- if theme_tab_about_us == './' %} class="active"{% endif %}>
                         <div id="resourcesDropdownButton" data-toggle="resources-dropdown" class="resources-dropdown">
                             <a class="resource-option with-down-orange-arrow">About</a>
                             <div class="resources-dropdown-menu">
-                                <a class="doc-dropdown-option nav-dropdown-item" href="{%- if display_tab == 'about_us' %}#{% else %}{{ pathto('about_us/index') }}{% endif %}">
-                                    <span class="dropdown-title {%- if display_tab == 'about_us' %} active{% endif %}">About Us</span>
+                                <a class="doc-dropdown-option nav-dropdown-item" href="{{ theme_tab_about_us }}">
+                                    <span class="dropdown-title {%- if theme_tab_about_us == './' %} active{% endif %}">About Us</span>
                                 </a>
                                 <a class="doc-dropdown-option nav-dropdown-item" href="{{ theme_variables.external_urls['forums'] }}">
                                     <span class="dropdown-title">Forums</span>
