--- a/styles/_sphinx_base.scss
+++ b/styles/_sphinx_base.scss
@@ -186,7 +186,6 @@ h1 {
 span.pre {
   color: $content_text_color;
   background-color: $light_grey;
-  padding: 2px 6px;
 }
 
 pre {
@@ -214,7 +213,6 @@ a:visited {
 }
 
 article.pytorch-article {
-  ul,
   ol {
     padding-left: rem(30px);
     margin: 0;
@@ -228,8 +226,7 @@ article.pytorch-article {
       margin-bottom: 0;
     }
 
-    ul,
-    ol {
+    ul, ol {
       margin: 0;
     }
   }
