docs: fix style

--- a/styles/_right_menu.scss
+++ b/styles/_right_menu.scss
@@ -43,21 +43,21 @@
 
 // Expanding elements
 
-.pytorch-right-menu a.reference.internal {
-  &.expanded:before {
-    content: "-";
-    font-family: monospace;
-    position: absolute;
-    left: -12px;
-  }
-
-  &.not-expanded:before {
-    content: "+";
-    font-family: monospace;
-    position: absolute;
-    left: -12px;
-  }
-}
+// .pytorch-right-menu a.reference.internal {
+//  &.expanded:before {
+//    content: "-";
+//    font-family: monospace;
+//    position: absolute;
+//    left: -12px;
+//  }
+//
+//  &.not-expanded:before {
+//    content: "+";
+//    font-family: monospace;
+//    position: absolute;
+//    left: -12px;
+//  }
+//}
 
 
 
