desktop class - function - etc left padding fixed

--- a/styles/_sphinx_base.scss
+++ b/styles/_sphinx_base.scss
@@ -386,7 +386,7 @@ article.pytorch-article {
       text-transform: uppercase;
     }
     dd {
-      padding-left: rem(60px);
+      padding-left: 1.75rem;
       p {
         color: $not_quite_black;
       }
