--- a/templates/layout.jinja
+++ b/templates/layout.jinja
@@ -54,7 +54,7 @@
                 <div class="pytorch-content-left">
                     {% if check_meta %}
                         <div class="pytorch-call-to-action-links">
-                            <div id="tutorial-type" data-name="{{ meta['tutorial_name'] }}" data-dist="{{ meta['tutorial_dist'] }}" data-source="{{ meta['tutorial_source'] }}" data-github="{{ meta['github_url'] }}"></div>
+                            <div id="tutorial-type" data-name="{{ meta['tutorial_name'] }}" data-path="{{ meta['tutorial_path'] }}" data-github="{{ meta['github_url'] }}"></div>
 
                             <div id="google-colab-link">
                                 <span class="pytorch-colab call-to-action-any"></span>
