tutorial buttons limited to tutorials only

--- a/templates/layout.jinja
+++ b/templates/layout.jinja
@@ -52,7 +52,7 @@
 
             <section data-toggle="wy-nav-shift" id="pytorch-content-wrap" class="pytorch-content-wrap">
                 <div class="pytorch-content-left">
-                    {% if check_meta %}
+                    {% if check_meta and 'tutorial_name' in meta %}
                         <div class="pytorch-call-to-action-links">
                             <div id="tutorial-type" data-name="{{ meta['tutorial_name'] }}" data-path="{{ meta['tutorial_path'] }}" data-github="{{ meta['github_url'] }}"></div>
 
