--- a/templates/footer.jinja
+++ b/templates/footer.jinja
@@ -51,7 +51,7 @@
         {%- if show_sphinx %}
             {% trans %}
                 <div>
-                    Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/pytorch/pytorch_sphinx_theme">theme</a> provided by <a href="https://pytorch.org/">PyTorch</a>.
+                    Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/deeppavlov/dff_sphinx_theme">theme</a> provided by <a href="https://deeppavlov.ai">DeepPavlov</a>.
                 </div>
             {% endtrans %}
         {%- endif %}
